--- a/SEA_Application/Views/AspNetNotes/Create.cshtml
+++ b/SEA_Application/Views/AspNetNotes/Create.cshtml
@@ -10,11 +10,23 @@
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
-else if (User.IsInRole("Receptionist"))
+else
 {
     Layout = "~/Views/Shared/_ReceptionistDashboardLayout.cshtml";
-
 }
+
+<style>
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    /* Firefox */
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+</style>
 
 <div class="row">
     <div class="col-md-12">
@@ -251,14 +263,13 @@ else if (User.IsInRole("Receptionist"))
 
         var NotesNo = $("#NotesNo").val();
 
-        
-
         $.ajax({
 
             type: "POST",
             url: "/AspnetNotes/CheckNotesNoExist",
             data: { "id": id,"NotesNo": NotesNo },
             success: function (response) {
+                $("#NoteNoError").html("");
 
                 if (response == "Yes") {
                     NotesNoExist = "Yes";
@@ -278,6 +289,13 @@ else if (User.IsInRole("Receptionist"))
             $("#NoteNoError").html("");
             NotesNoExist = "No";
 
+           // alert(NotesNo);
+         //   alert(id);
+            debugger
+
+            if (id != null && NotesNo != null && NotesNo !="") {
+
+                $("#NoteNoError").html("");
 
             $.ajax({
 
@@ -285,6 +303,7 @@ else if (User.IsInRole("Receptionist"))
                 url: "/AspnetNotes/CheckNotesNoExist",
                 data: { "id": id, "NotesNo": NotesNo },
                 success: function (response) {
+                    $("#NoteNoError").html("");
 
                     if (response == "Yes") {
 
@@ -294,9 +313,10 @@ else if (User.IsInRole("Receptionist"))
 
                 }
 
-
-
             })
+
+            }
+
 
         })
 
