--- a/SEA_Application/Views/AspNetNotes/Edit.cshtml
+++ b/SEA_Application/Views/AspNetNotes/Edit.cshtml
@@ -299,16 +299,14 @@ else if (User.IsInRole("Receptionist"))
                         <br>
 
                         <div>
-                            <button type="submit" class="btn btn-primary rounded rounded-lg"> Save </button>
-
-
+                            <button id="saveBtn" type="button" class="btn btn-primary rounded rounded-lg"> Save </button>
 
 
                             <button type="button" id="cancel" onclick="redirect()" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
                                 <i class="material-icons mr-2">cached</i>  Cancel
                             </button>
 
-
+                            <input type="submit" id="btnSubmit" class="hidden" name="name" value="Submit" />
 
                         </div>
 
@@ -541,20 +539,60 @@ else if (User.IsInRole("Receptionist"))
             }
         })
 
-        $("form").submit(function () {
+        //$("form").submit(function () {
 
-            // alert(NotesNoExist);
+            
+        //    debugger
+
+        //    if (NotesNoExist == "Yes") {
+
+        //        return false;
+        //    }
+        //    else {
+        //        return true;
+        //    }
+
+        //});
+
+        $("#saveBtn").click(function () {
+
             debugger
 
-            if (NotesNoExist == "Yes") {
+            var NotesNoExist = "No";
+            var id = $("#Id").val();
+            var NotesNo = $("#NotesNo").val();
 
-                return false;
-            }
-            else {
-                return true;
+            if (id != null && NotesNo != null && NotesNo != "") {
+                $.ajax({
+
+                    type: "POST",
+                    url: "/AspnetNotes/CheckNotesNoExist",
+                    data: { "id": id, "NotesNo": NotesNo },
+                    success: function (response) {
+                        debugger
+                        $("#NoteNoError").html("");
+
+                        if (response == "Yes") {
+
+                            $("#NoteNoError").html("Selected code no already exist.");
+
+                            // return false;
+                        }
+                        else {
+
+                            $("#btnSubmit").click();
+                            // return true;
+                        }
+
+                    }
+
+
+                })
+
+
             }
 
-        });
+        })
 
 
 
