--- a/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
@@ -432,7 +432,7 @@
                                     </p>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                                    <a class="dropdown-item" href="/Manage/Index">Security</a>
+                                    <a id="security" class="dropdown-item" href="/Manage/Index">Security</a>
                                     <a class="dropdown-item hidden" href="#">Privacy</a>
                                     <div class="dropdown-divider hidden"></div>
                                     <a class="dropdown-item hidden" href="#">Settings</a>
