--- a/SEA_Application/Views/AspNetSession/Password.cshtml
+++ b/SEA_Application/Views/AspNetSession/Password.cshtml
@@ -184,12 +184,19 @@ else
                             <tr>
                                 <th>
                                     Id
-                                    </th>
-                                <th>
-                               Username
                                 </th>
                                 <th>
-                                   Password
+                                    Student Name
+                                </th>
+                                <th>
+                                   Class Name
+                                </th>
+
+                                <th>
+                                    Username
+                                </th>
+                                <th>
+                                    Password
                                 </th>
                             </tr>
                         </thead>
@@ -199,11 +206,17 @@ else
                             {
                                 <tr>
 
-                                    
-
                                     <td>
                                         @Html.DisplayFor(modelItem => item.id)
                                     </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.StudentName)
+                                    </td>
+
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.AspNetSession.SessionName)
+                                    </td>
+
                                     <td>
                                         @Html.DisplayFor(modelItem => item.StudentUserName)
                                     </td>
