--- a/SEA_Application/Views/AspNetNotes/ReturnOrder.cshtml
+++ b/SEA_Application/Views/AspNetNotes/ReturnOrder.cshtml
@@ -43,7 +43,7 @@ else if (User.IsInRole("Receptionist"))
 
                 <form id="myForm">
 
-                    <div class="col-md-6 pl-5 pr-5 ">
+                    <div class="col-md-3 ">
 
                         <div class="form-row mt-4">
                             <div class="form-group col-md-12 bmd-form-group">
@@ -60,7 +60,7 @@ else if (User.IsInRole("Receptionist"))
                         <div class="col-md-3">
 
                             <label class="control-label">Notes </label>
-                            <select class="form-control code NotesClass" id="Notes0" name="Notes" required> </select>
+                            <select class="form-control code NotesClass drop" id="Notes0" name="Notes" required> </select>
 
                         </div>
 
