--- a/SEA_Application/Views/AspNetSession/Password.cshtml
+++ b/SEA_Application/Views/AspNetSession/Password.cshtml
@@ -12,6 +12,7 @@
 
         
         var table = $('#datatable').dataTable({
+            order: [[0, 'desc']],
             buttons: [
                 {
                     text: ''
