--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -144,6 +144,12 @@
                             <p id="">Cash Summary </p>
                         </a>
                     </li>
+                    <li id="Receipts" class="nav-item">
+                        <a href="@Url.Action("Index", "Receipts")" class="nav-link nav-toggle">
+                            <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                            <p id="">Cash Receipts</p>
+                        </a>
+                    </li>
                     <li id="StudentFee" class="nav-item">
                         <a href="@Url.Action("StudentFee", "GrandTotal" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
